@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: ExN03RunAction.cc,v 1.3 1999-04-12 14:30:54 maire Exp $
+// $Id: ExN03RunAction.cc,v 1.4 1999-04-16 11:55:10 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -34,10 +34,11 @@ ExN03RunAction::~ExN03RunAction()
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
-void ExN03RunAction::BeginOfRunAction(G4Run* aRun)
+void ExN03RunAction::BeginOfRunAction(const G4Run* aRun)
 {
-  aRun->SetRunID(++runIDcounter);
-   
+ 
+  ((G4Run*)(aRun))->SetRunID(runIDcounter++);  
+
   G4cout << "### Run " << runIDcounter << " start." << endl;
 
   if (G4VVisManager::GetConcreteInstance())
@@ -50,10 +51,11 @@ void ExN03RunAction::BeginOfRunAction(G4Run* aRun)
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
-void ExN03RunAction::EndOfRunAction(G4Run* aRun)
+void ExN03RunAction::EndOfRunAction(const G4Run* )
 {
   if (G4VVisManager::GetConcreteInstance())
      G4UImanager::GetUIpointer()->ApplyCommand("/vis/show/view");
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
+
