@@ -1,4 +1,4 @@
-$Id: History,v 1.2 1999-03-10 16:15:35 maire Exp $
+$Id: History,v 1.3 1999-04-16 11:55:01 kurasige Exp $
 --------------------------------------------------
 
      =========================================================
@@ -14,6 +14,12 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+16th April 1999 H.Kurashige
+- modify ExN03SteppingAction::UserSteppingAction
+- modify ExN03EventAction
+- modify ExN03RunAction::BeginOfRunAction/EndOfRunAction
+- Add  cutForGamma/cutForElectron/cutForProton in ExN03PhysicsList
+- modify ExN03PhysicsList::SetCuts
      
 10-03-99 Michel Maire
 - Choose RaneCu as the default random number generator.
